# cppExercism

./: .gitignore  CMakeLists.txt  README.md
Exercism/freelancer rates/: TEST.md  test.cpp
Exercism/lasagna/: TEST.md  lasagna.cpp
Exercism/last will/: TEST.md  test.cpp
Exercism/log levels/: TEST.md  test.cpp
Exercism/pacman rules/: TEST.md
Exercism/raindrops/: TEST.md  test.cpp
Exercism/vehicle purchase/: TEST.md  test.cpp  test.h
